--- a/.github/ISSUE_TEMPLATE/api_design_proposal.yaml
+++ b/.github/ISSUE_TEMPLATE/api_design_proposal.yaml
@@ -1,4 +1,4 @@
-name: 🐛 API Design Proposal
+name:💡 API Design Proposal
 description: Propose an enhancement or change to existing OpenAPI design
 title: "[ENDPOINT]: Proposed design change for <endpoint name here> "
 labels: "API Design "
